--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -11,30 +11,38 @@
                             </a>
                         </figure>
                     </div>
-                   
+
                     <div class="main-location ml-5">
                         <ul>
                             <li class="location-has-children choose-location">
                                 <form action="#">
-                                    <input type="text" value="" name="location" placeholder="Enter your delivery location" autocomplete="off">
-                                    <span id="foodbakery_radius_location_open" class="foodbakery-radius-location"><i class="icon-target5"></i></span>
+                                    <input type="text" value="" name="location"
+                                        placeholder="Enter your delivery location" autocomplete="off">
+                                    <span id="foodbakery_radius_location_open" class="foodbakery-radius-location"><i
+                                            class="icon-target5"></i></span>
                                 </form>
-                                
+
                             </li>
                         </ul>
-                        </div>
+                    </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <div class="login-option">
-                        <span><a class="cs-color cs-popup-joinus-btn login-popup"href="{% url 'home' %}">Login</a</span>
-                            /
-                        <span>
-                        <a href="{% url 'registerUser' %}" class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a>
-                        </span>
-                        
+                        {% if user.is_authenticated %}
+                        <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'myaccount' %}">My Account</a>
+                        <a class="cs-color cs-popup-joinus-btn login-popup text-danger" href="{% url 'logout' %}">Logout</a>
+
+                        {% else %}
+                        <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'login' %}">Login</a> / <a
+                            href="{% url 'registerUser' %}"
+                            class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a>
+
+
                         <a class="get-start-btn" href="{% url 'registerVendor' %}">
                             Register
                             Restaurant </a>
+
+                        {% endif %}
                     </div>
                 </div>
             </div>
