--- a/templates/accounts/forget_password.html
+++ b/templates/accounts/forget_password.html
@@ -9,15 +9,15 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
                     <div class="user-dashboard loader-holder" style="width:450px ;min-height:auto">
                         <div class="user-holder">
-                            <h4 class="text-center" style="margin-bottom: 0;">SIGN IN</h4>
+                            <h4 class="text-center" style="margin-bottom: 0;">forget your password?</h4>
                             <p class="text-center">
 
-                                order food from your favorite restaurants
+                               please enter  your email address and we will send you a link to reset your password.
                             </p>
                             <hr>
                             <div id="restaurant-sets-holder">
                                 <form class="form-fields-set foodbakery-dev-restaurant-form" method="post" enctype="multipart/form-data"
-                                    action="{% url 'login' %}">
+                                    action="{% url 'forget_password' %}">
 
                                     {% csrf_token %}
                                     <ul
@@ -35,12 +35,6 @@
                                                                        <input type="email" name="email" placeholder="Enter email address">
                                                                     </div>
                                                                 </div>
-                                                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                                                    <div class="field-holder">
-                                                                        <label>Password</label>
-                                                                        <input type="password" name="password" placeholder="Enter your password">
-                                                                    </div>
-                                                                </div>
                                                             </li>
                                                         </ul>
 
@@ -55,10 +49,8 @@
                                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                     <div class="field-holder">
                                                         <div class="payment-holder">
-                                                            <input type="submit" value="Submit"
+                                                            <input type="submit" value="Continue"
                                                                 id="btn-next-restaurant-information" class="bgcolor">
-
-                                                                <a href="{% url 'forget_password' %}"class='float-right'>Forget Password?</a>
                                                         </div>
                                                     </div>
                                                 </div>
