--- a/templates/accounts/reset_password.html
+++ b/templates/accounts/reset_password.html
@@ -9,15 +9,14 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
                     <div class="user-dashboard loader-holder" style="width:450px ;min-height:auto">
                         <div class="user-holder">
-                            <h4 class="text-center" style="margin-bottom: 0;">SIGN IN</h4>
+                            <h4 class="text-center" style="margin-bottom: 0;">Reset password</h4>
                             <p class="text-center">
-
-                                order food from your favorite restaurants
+                                please reset your password in order to used this platform
                             </p>
                             <hr>
                             <div id="restaurant-sets-holder">
-                                <form class="form-fields-set foodbakery-dev-restaurant-form" method="post" enctype="multipart/form-data"
-                                    action="{% url 'login' %}">
+                                <form class="form-fields-set foodbakery-dev-restaurant-form" method="post"
+                                    enctype="multipart/form-data" action="{% url 'reset_password' %}">
 
                                     {% csrf_token %}
                                     <ul
@@ -31,14 +30,16 @@
                                                             <li>
                                                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                                     <div class="field-holder">
-                                                                        <label>Email address</label>
-                                                                       <input type="email" name="email" placeholder="Enter email address">
+                                                                        <label>Password</label>
+                                                                        <input type="password" name="password"
+                                                                            placeholder="Set new password">
                                                                     </div>
                                                                 </div>
                                                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                                     <div class="field-holder">
-                                                                        <label>Password</label>
-                                                                        <input type="password" name="password" placeholder="Enter your password">
+                                                                        <label>Confirm Password</label>
+                                                                        <input type="password" name="confirm_password"
+                                                                            placeholder="Confirm your new password">
                                                                     </div>
                                                                 </div>
                                                             </li>
@@ -50,15 +51,14 @@
                                         </li>
                                         <li>
 
-                                          
+
                                             <div class="row">
                                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                     <div class="field-holder">
                                                         <div class="payment-holder">
-                                                            <input type="submit" value="Submit"
+                                                            <input type="submit" value="Reset_password"
                                                                 id="btn-next-restaurant-information" class="bgcolor">
 
-                                                                <a href="{% url 'forget_password' %}"class='float-right'>Forget Password?</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -67,7 +67,7 @@
 
 
                                             <div class="row">
-                                                
+
                                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                     {% include 'includes/messages.html' %}
 
