adding new feature in vendor dashboard

--- a/templates/base.html
+++ b/templates/base.html
@@ -79,6 +79,11 @@
 				margin-left: 0px !important;
 			}
 		}
+		.btn.btn-info{
+			padding:2px 1.7em;
+			font-size: 12px;
+			cursor: pointer;
+		}
 	</style>
 </head>
 
