--- a/templates/includes/cover.html
+++ b/templates/includes/cover.html
@@ -20,7 +20,7 @@
                                     <span class="restaurant-title">{{Vendor.vendor_name}}</span>
                                     <div class="text">
                                         <i class="icon-location"></i>
-                                        <p>{{Vendor.user_profile.fulladdress}}</p>
+                                        <p>{{Vendor.user_profile.address}}</p>
                                     </div>
                                 </div>
                             </div>
