edit add button

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -37,10 +37,11 @@
                                                                 </div>
                                                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                                     <div class="field-holder">
-                                                                        <label>Password</label>
-                                                                        <input type="password" name="password" placeholder="Enter your password">
+                                                                        <label>Enter password</label>
+                                                                       <input type="password" name="password" placeholder="Enter  password">
                                                                     </div>
                                                                 </div>
+                                                               
                                                             </li>
                                                         </ul>
 
