--- a/templates/includes/slide_bar.html
+++ b/templates/includes/slide_bar.html
@@ -5,7 +5,7 @@
                         class="icon-dashboard3"></i>Dashboard</a></li>
             <li class="{% if 'profile' in request.path %}active{% endif %}"><a href="{% url 'vprofile' %}"><i class="icon-building"></i>My
                     Restaurant</a></li>
-            <li><a href="restaurant-menu-builder.html"><i class="icon-menu5"></i>Menu
+            <li class="{% if 'menu-builder' in request.path %}active{% endif %}"><a href="{% url 'menubuilder' %}"><i class="icon-menu5"></i>Menu
                     Builder</a></li>
             <li><a href="restaurant-orders.html"><i
                         class="icon-add_shopping_cart"></i>Orders</a></li>
