--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,9 @@
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800">
 	<!-- Google Font Family Link End -->
+  
+	 <!-- font awsome -->
+	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 
 
 	<!-- for bootsratp -->
@@ -27,9 +30,12 @@
 	<link href="{% static 'assets/css/bootstrap-slider.css' %}" rel="stylesheet">
 
 	<!-- JAVASCRIPT -->
+
+    <script src="https://maps.googleapis.com/maps/api/js?key={{GOOGLE_API_KEY}}&libraries=places&callback=initAutoComplete" async defer></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="{% static 'assets/js/modernizr.js' %}"></script>
 	<script src="{% static 'assets/js/bootstrap.js' %}"></script>
+	<script src="{% static 'assets/js/custom.js' %}"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 		crossorigin="anonymous"></script>
@@ -79,7 +85,7 @@
 				margin-left: 0px !important;
 			}
 		}
-		.btn.btn-info{
+		.btn{
 			padding:2px 1.7em;
 			font-size: 12px;
 			cursor: pointer;
