--- a/templates/includes/cover.html
+++ b/templates/includes/cover.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <div class="page-section restaurant-detail-image-section"
-            style=" background: url({{Vendor.user_profile.cover_picture.url}}) no-repeat scroll 0 0 / cover;">
+            style=" background: url({% if Vendor.user_profile.cover_photo %} {{Vendor.user_profile.cover_picture.url }} {% else %} {% static 'assets/images/default-cover.PNG' %} {% endif %}) no-repeat scroll 0 0 / cover;">
             <!-- Container Start -->
             <div class="container">
                 <!-- Row Start -->
@@ -12,15 +12,22 @@
                             <div class="company-info">
                                 <div class="img-holder">
                                     <figure>
+                                        {% if Vendor.user_profile.profile_picture %}
                                         <img src="{{Vendor.user_profile.profile_picture.url}}" alt="">
+                                        {% else %}
+                                        <img src="{% static 'assets/images/default-profile.PNG' %}" alt="">
+                                        {% endif %}
+                                        
                                     </figure>
                                 </div>
 
                                 <div class="text-holder">
                                     <span class="restaurant-title">{{Vendor.vendor_name}}</span>
                                     <div class="text">
+                                        {% if Vendor.user_profile.address %}
                                         <i class="icon-location"></i>
                                         <p>{{Vendor.user_profile.address}}</p>
+                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
