--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -1,7 +1,7 @@
 {% load static %}
 <header id="header">
     <div class="main-header">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                     <div class="logo">
@@ -28,6 +28,7 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <div class="login-option">
+                        <a href="{% url 'Marketplace' %}" class="btn btn-outline-danger text-upercase font-weight-bold">Marketplace</a>
                         {% if user.is_authenticated %}
                         <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'myaccount' %}">My Account</a>
                         <a class="cs-color cs-popup-joinus-btn login-popup text-danger" href="{% url 'logout' %}">Logout</a>
