--- a/templates/base.html
+++ b/templates/base.html
@@ -30,8 +30,9 @@
 	<link href="{% static 'assets/css/bootstrap-slider.css' %}" rel="stylesheet">
 
 	<!-- JAVASCRIPT -->
-
+   {% if '/profile/' in request.POST %}
     <script src="https://maps.googleapis.com/maps/api/js?key={{GOOGLE_API_KEY}}&libraries=places&callback=initAutoComplete" async defer></script>
+  {% endif %}
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="{% static 'assets/js/modernizr.js' %}"></script>
 	<script src="{% static 'assets/js/bootstrap.js' %}"></script>
@@ -39,6 +40,9 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 		crossorigin="anonymous"></script>
+		<!-- sweet alert -->
+	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+	
 	</body>
 
 	<style>
