--- a/templates/marketplace/vendor_detail.html
+++ b/templates/marketplace/vendor_detail.html
@@ -4,7 +4,8 @@
 
 <!-- Main Section Start -->
 <div class="main-section">
-    <div class="page-section restaurant-detail-image-section" style=" background:  url({% if vendor.user_profile.cover_picture %}{{ vendor.user_profile.cover_picture.url }}{% else %}{% static 'assets/images/default-cover.PNG' %}{% endif %}) no-repeat scroll 0 0 / cover;">
+    <div class="page-section restaurant-detail-image-section"
+        style=" background:  url({% if vendor.user_profile.cover_picture %}{{ vendor.user_profile.cover_picture.url }}{% else %}{% static 'assets/images/default-cover.PNG' %}{% endif %}) no-repeat scroll 0 0 / cover;">
         <!-- Container Start -->
         <div class="container">
             <!-- Row Start -->
@@ -23,7 +24,7 @@
                                 </figure>
                             </div>
                             <div class="text-holder">
-                               
+
                                 <span class="restaurant-title">{{vendor.vendor_name}}</span>
                                 <div class="text">
                                     {% if vendor.user_profile.address %}
@@ -31,14 +32,14 @@
                                     <p>{{vendor.user_profile.address}}</p>
                                     {% endif %}
                                 </div>
-                               
-                                
-                                
-                                
+
+
+
+
                             </div>
                         </div>
                         <div class="delivery-timing reviews-sortby">
-                            
+
                             <ul>
                                 <li>
                                     <a href="#" class="reviews-sortby-active">
@@ -46,19 +47,26 @@
                                         11:00 am - 11:00 pm <i class="icon-chevron-small-down"></i>
                                     </a>
                                     <ul class="delivery-dropdown">
-                                        <li><a href="#"><span class="opend-day">Monday</span> <span class="opend-time"><small>:</small> 11:00 am - 11:00
+                                        <li><a href="#"><span class="opend-day">Monday</span> <span
+                                                    class="opend-time"><small>:</small> 11:00 am - 11:00
                                                     pm</span></a></li>
-                                        <li><a href="#"><span class="opend-day">Tuesday</span> <span class="opend-time"><small>:</small> 11:00 am - 11:00
+                                        <li><a href="#"><span class="opend-day">Tuesday</span> <span
+                                                    class="opend-time"><small>:</small> 11:00 am - 11:00
                                                     pm</span></a></li>
-                                        <li><a href="#"><span class="opend-day">Wednesday</span> <span class="opend-time"><small>:</small> 11:00 am - 11:00
+                                        <li><a href="#"><span class="opend-day">Wednesday</span> <span
+                                                    class="opend-time"><small>:</small> 11:00 am - 11:00
                                                     pm</span></a></li>
-                                        <li><a href="#"><span class="opend-day">Thursday</span> <span class="opend-time"><small>:</small> 11:00 am - 11:00
+                                        <li><a href="#"><span class="opend-day">Thursday</span> <span
+                                                    class="opend-time"><small>:</small> 11:00 am - 11:00
                                                     pm</span></a></li>
-                                        <li><a href="#"><span class="opend-day">Friday</span> <span class="opend-time"><small>:</small> 11:00 am - 11:00
+                                        <li><a href="#"><span class="opend-day">Friday</span> <span
+                                                    class="opend-time"><small>:</small> 11:00 am - 11:00
                                                     pm</span></a></li>
-                                        <li><a href="#"><span class="opend-day">Saturday</span> <span class="opend-time"><small>:</small> 11:00 am - 11:00
+                                        <li><a href="#"><span class="opend-day">Saturday</span> <span
+                                                    class="opend-time"><small>:</small> 11:00 am - 11:00
                                                     pm</span></a></li>
-                                        <li><a href="#"><span class="opend-day">Sunday</span> <span class="opend-time close-day"><small>:</small>Closed</span></a>
+                                        <li><a href="#"><span class="opend-day">Sunday</span> <span
+                                                    class="opend-time close-day"><small>:</small>Closed</span></a>
                                         </li>
                                     </ul>
                                 </li>
@@ -85,8 +93,9 @@
                             <h6><i class="icon-restaurant_menu"></i>Categories</h6>
                             <ul class="menu-list">
                                 {% for category in category %}
-                                <li class="active"><a href="#" class="menu-category-link"> {{category.category_name}} </a></li>
-                                
+                                <li class="active"><a href="#" class="menu-category-link"> {{category.category_name}}
+                                    </a></li>
+
                                 {% endfor %}
                             </ul>
                         </div>
@@ -95,15 +104,16 @@
                 <div class="col-lg-9 col-md-9 col-sm-8 col-xs-12">
                     <div class="tabs-holder horizontal">
                         <ul class="stickynav-tabs nav nav-tabs">
-                            <li class="active"><a data-toggle="tab" href="#home"><i class="icon- icon-room_service"></i>Menu</a></li>
-                            
+                            <li class="active"><a data-toggle="tab" href="#home"><i
+                                        class="icon- icon-room_service"></i>Menu</a></li>
+
                         </ul>
                         <div class="tab-content">
                             <div id="home" class="tab-pane in active">
                                 <div class="menu-itam-holder">
-                                    
+
                                     <div id="menu-item-list-6272" class="menu-itam-list">
-                                        
+
                                         {% for category in category %}
                                         <div class="element-title" id="menu-category-2">
                                             <h5 class="text-color">{{category.category_name}}</h5>
@@ -112,33 +122,44 @@
                                         <ul>
                                             {% for food_items in category.fooditems.all %}
                                             <li>
-                                                
-                                                <div class="image-holder"><img src="{{ food_items.image.url }}" alt=""></div>
+
+                                                <div class="image-holder"><img src="{{ food_items.image.url }}" alt="">
+                                                </div>
                                                 <div class="text-holder">
-                                             
+
                                                     <h6>{{food_items.food_title}}</h6>
                                                     <span>{{food_items.descriptions}}</span>
-                                                      
+
                                                 </div>
                                                 <div class="price-holder">
                                                     <span class="price">{{ food_items.price }}</span>
-                                                    <a href="#" class="restaurant-add-menu-btn"><i class="icon-plus4 text-color"></i></a>
+                                                    <a href="#" class="decrease_cart" data-id="{{food_items.id}}" data-url="{% url 'decrease_to_cart' food_items.id %}" style="margin-right: 28px;"><i
+                                                            class="icon-minus text-color"></i></a>
+                                                    <label id="qty-{{food_items.id}}">0</label>
+                                                    <a href="#" class="add_to_cart" data-id="{{food_items.id}}"
+                                                        data-url="{% url 'add_cart' food_items.id %}"><i
+                                                            class="icon-plus4 text-color"></i></a>
                                                     <span id="add-menu-loader-10"></span>
                                                 </div>
                                             </li>
-                                            {% endfor %} 
-                                           
+                                            {% endfor %}
+
                                         </ul>
                                         {% endfor %}
-                                        
+
                                     </div>
+                                    {% for items in cart_items %}
+
+                                    <span id="qty-{{items.fooditem.id}}" class="item_qty d-none"
+                                        data-qty="{{ items.quantity }}">{{items.quantity}}</span>
+                                    {% endfor %}
                                 </div>
                             </div>
-                            
+
                         </div>
                     </div>
                 </div>
-                
+
             </div>
         </div>
     </div>
