--- a/templates/home.html
+++ b/templates/home.html
@@ -113,7 +113,7 @@
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="margin-right:0 !important ;margin-left:0 !important;">
 							<div class="company-logo">
 								<ul>
-									{% for vendor in vendor %}
+									{% for vendor in items %}
 									<li class="has-border">
 										<figure>
 											{% if vendor.user_profile.profile_picture %}
@@ -146,7 +146,7 @@
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<div class="listing fancy">
 								<ul class="row">
-									{% for vendor in vendor %}
+									{% for vendor in items %}
 									<li class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 										<div class="list-post featured">
 											<div class="img-holder">
