--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -3,7 +3,7 @@
     <div class="main-header">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+                <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
                     <div class="logo">
                         <figure>
                             <a href="{% url 'home' %}" class="light-logo">
@@ -26,12 +26,12 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
                     <div class="login-option">
                         {% if user.is_authenticated %}
                         <a href="">
                             <i class="fa fa-shopping-cart text-danger" style="font-size: 20px;"></i>
-                            <span class="badge text-bg-warning" id="cart_counter" style="border-radius: 50px;position:relative; bottom: 10px;left: -5px;">{{cart_count}}</span>
+                            <span class="badge text-bg-warning" id="cart_counter" style="border-radius: 50px;position:relative; bottom: 10px;left: -5px;">{{cart_counter}}</span>
                         </a>
                         {% endif %}
 
